Add search box for searching local/remote branches or tags.
This commit adds a new search box into left repository panel.
This text box allows searching for local branches, remote branches or tags simultaniously with same text. It has a regex support.
Search is performed on timer to expect user complete typing and not spamming the search for each input symbol. While typing the regex pattern the search can be triggered with invalid pattern, in this case the search results are reset and no exception is propagaded.

--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -348,6 +348,7 @@
   <x:String x:Key="Text.Repository.Resolve" xml:space="preserve">RESOLVE</x:String>
   <x:String x:Key="Text.Repository.Search" xml:space="preserve">Search Commit</x:String>
   <x:String x:Key="Text.Repository.SearchTip" xml:space="preserve">Search Author/Committer/Message/SHA</x:String>
+  <x:String x:Key="Text.Repository.SearchBranchesOrTagsTip" xml:space="preserve">Search Branches or Tags</x:String>
   <x:String x:Key="Text.Repository.Statistics" xml:space="preserve">Statistics</x:String>
   <x:String x:Key="Text.Repository.Submodules" xml:space="preserve">SUBMODULES</x:String>
   <x:String x:Key="Text.Repository.Submodules.Add" xml:space="preserve">ADD SUBMODULE</x:String>
