--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -28,7 +28,7 @@
           
           <ToggleButton Width="32"
                         Background="Transparent"
-                        IsChecked="{Binding IsSearching, Mode=TwoWay}">
+                        IsChecked="{Binding IsSearchingCommits, Mode=TwoWay}">
             <ToolTip.Tip>
               <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                 <TextBlock Text="{DynamicResource Text.Repository.Search}" VerticalAlignment="Center"/>
@@ -109,7 +109,7 @@
       </Grid.ColumnDefinitions>
 
       <!-- Left Normal Mode -->
-      <Grid Grid.Column="0" RowDefinitions="28,Auto,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
+      <Grid Grid.Column="0" RowDefinitions="28,Auto,28,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearchingCommits}">
         <!-- WorkingCopy -->
         <TextBlock Grid.Row="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Workspace}"/>
         <ListBox Grid.Row="1" Classes="page_switcher" Background="Transparent" SelectedIndex="{Binding SelectedViewIndex, Mode=TwoWay}">
@@ -158,13 +158,49 @@
             </Grid>
           </ListBoxItem>
         </ListBox>
+        
+        <!-- Search branches or tags -->
+        <TextBox Grid.Row="2"
+                 x:Name="txtSearchBranchesAndTagsBox"
+                 Margin="6,4,4,4"
+                 Height="24"
+                 BorderThickness="1"
+                 BorderBrush="{DynamicResource Brush.Border2}"
+                 CornerRadius="3"
+                 Background="{DynamicResource Brush.Contents}"
+                 Watermark="{DynamicResource Text.Repository.SearchBranchesOrTagsTip}"
+                 Text="{Binding SearchBranchOrTagFilter, Mode=TwoWay}"
+                 VerticalContentAlignment="Center"
+                 KeyDown="OnSearchBranchesAndTagsKeyDown">
+          <TextBox.InnerLeftContent>
+            <Path Width="14" Height="14"
+                  Margin="6,0,0,0"
+                  Fill="{DynamicResource Brush.FG2}"
+                  Data="{StaticResource Icons.Search}"/>
+          </TextBox.InnerLeftContent>
+
+          <TextBox.InnerRightContent>
+            <Button Classes="icon_button"
+                    Width="16"
+                    Margin="0,0,6,0"
+                    Command="{Binding ClearSearchBranchOrTagFilter}"
+                    IsVisible="{Binding SearchBranchOrTagFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                    IsTabStop="False"
+                    HorizontalAlignment="Right">
+              <Path Width="14" Height="14"
+                    Margin="0,1,0,0"
+                    Fill="{DynamicResource Brush.FG1}"
+                    Data="{StaticResource Icons.Clear}"/>
+            </Button>
+          </TextBox.InnerRightContent>
+        </TextBox>
 
         <!-- Local Branches -->
-        <TextBlock Grid.Row="2" Classes="group_header_label" Text="{DynamicResource Text.Repository.LocalBranches}"/>
-        <TreeView Grid.Row="3"
+        <TextBlock Grid.Row="3" Classes="group_header_label" Text="{DynamicResource Text.Repository.LocalBranches}"/>
+        <TreeView Grid.Row="4"
                   x:Name="localBranchTree"
                   MaxHeight="400"
-                  ItemsSource="{Binding LocalBranchTrees}"
+                  ItemsSource="{Binding LocalBranchTreesVisible}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   LostFocus="OnLocalBranchTreeLostFocus"
@@ -175,8 +211,8 @@
             </Style>
           </TreeView.Styles>
           <TreeView.ItemTemplate>
-            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type m:BranchTreeNode}">
-              <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" ContextRequested="OnLocalBranchContextMenuRequested" DoubleTapped="OnDoubleTappedLocalBranchNode">
+            <TreeDataTemplate ItemsSource="{Binding ChildrenVisible}" x:DataType="{x:Type m:BranchTreeNode}">
+              <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" ContextRequested="OnLocalBranchContextMenuRequested" DoubleTapped="OnDoubleTappedBranchNode">
                 <Path Grid.Column="0" Classes="folder_icon" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,1,0,0" IsVisible="{Binding IsFolder}"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Check}" IsVisible="{Binding IsCurrent}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" VerticalAlignment="Center">
@@ -208,15 +244,15 @@
         </TreeView>
 
         <!-- Remotes -->
-        <Grid Grid.Row="4" ColumnDefinitions="*,Auto">
+        <Grid Grid.Row="5" ColumnDefinitions="*,Auto">
           <TextBlock Grid.Column="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Remotes}"/>
           <Button Grid.Column="1" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding AddRemote}" ToolTip.Tip="{DynamicResource Text.Repository.Remotes.Add}">
             <Path Width="12" Height="12" Data="{StaticResource Icons.Remote.Add}"/>
           </Button>
         </Grid>
-        <TreeView Grid.Row="5"
+        <TreeView Grid.Row="6"
                   x:Name="remoteBranchTree"
-                  ItemsSource="{Binding RemoteBranchTrees}"
+                  ItemsSource="{Binding RemoteBranchTreesVisible}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   LostFocus="OnRemoteBranchTreeLostFocus"
@@ -228,8 +264,8 @@
           </TreeView.Styles>
 
           <TreeView.ItemTemplate>
-            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type m:BranchTreeNode}">
-              <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" ContextRequested="OnRemoteBranchContextMenuRequested">
+            <TreeDataTemplate ItemsSource="{Binding ChildrenVisible}" x:DataType="{x:Type m:BranchTreeNode}">
+              <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" ContextRequested="OnRemoteBranchContextMenuRequested"  DoubleTapped="OnDoubleTappedBranchNode">
                 <Path Grid.Column="0" Classes="folder_icon" Width="10" Height="10" HorizontalAlignment="Left" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Remote}" IsVisible="{Binding IsRemote}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" IsVisible="{Binding IsBranch}" VerticalAlignment="Center"/>
@@ -250,7 +286,7 @@
         </TreeView>
 
         <!-- Tags -->
-        <ToggleButton Grid.Row="6" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
+        <ToggleButton Grid.Row="7" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
           <Grid ColumnDefinitions="Auto,*,Auto">
             <TextBlock Grid.Column="0" Classes="group_header_label" Margin="4,0,0,0" Text="{DynamicResource Text.Repository.Tags}"/>
             <TextBlock Grid.Column="1" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
@@ -259,58 +295,46 @@
             </Button>
           </Grid>
         </ToggleButton>
-        <DataGrid Grid.Row="7"
+        <TreeView Grid.Row="8"
                   MaxHeight="200"
                   Background="Transparent"
-                  ItemsSource="{Binding Tags}"
-                  SelectionMode="Single"
-                  CanUserReorderColumns="False"
-                  CanUserResizeColumns="False"
-                  CanUserSortColumns="False"
-                  IsReadOnly="True"
-                  HeadersVisibility="None"
-                  Focusable="False"
-                  RowHeight="24"
-                  HorizontalScrollBarVisibility="Disabled"
-                  VerticalScrollBarVisibility="Auto"
-                  LostFocus="OnTagDataGridLostFocus"
+                  x:Name="tagTree"
+                  ItemsSource="{Binding TagTreesVisible}"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
                   IsVisible="{Binding IsTagGroupExpanded, Mode=OneWay}"
-                  SelectionChanged="OnTagDataGridSelectionChanged"
-                  ContextRequested="OnTagContextRequested">
-          <DataGrid.Columns>
-            <DataGridTemplateColumn Header="ICON">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate x:DataType="{x:Type m:Tag}">
-                  <Path Width="10" Height="10" Margin="16,0,8,0" Data="{StaticResource Icons.Tag}"/>
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
+                  SelectionMode="Single"
+                  SelectionChanged="OnTagTreeSelectionChanged"
+                  LostFocus="OnTagTreeLostFocus">
+          <TreeView.Styles>
+            <Style Selector="TreeViewItem" x:DataType="m:BranchTreeNode">
+              <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+            </Style>
+          </TreeView.Styles>
 
-            <DataGridTemplateColumn Width="*" Header="NAME">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate x:DataType="{x:Type m:Tag}">
-                  <TextBlock Text="{Binding Name}" Classes="monospace" TextTrimming="CharacterEllipsis" />
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
+          <TreeView.ItemTemplate>
+            <TreeDataTemplate ItemsSource="{Binding ChildrenVisible}" x:DataType="{x:Type m:BranchTreeNode}">
+              <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" ContextRequested="OnTagContextRequested" DoubleTapped="OnDoubleTappedBranchNode">
+                <Path Grid.Column="0" Classes="folder_icon" Width="10" Height="10" HorizontalAlignment="Left" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" VerticalAlignment="Center"/>
+                <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="16,0,8,0" Data="{StaticResource Icons.Tag}" IsVisible="{Binding IsTag}" VerticalAlignment="Center"/>
 
-            <DataGridTemplateColumn Header="FILTER">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate x:DataType="{x:Type m:Tag}">
-                  <ToggleButton Classes="filter"
-                                Margin="0,0,8,0"
-                                Background="Transparent"
-                                Checked="OnToggleFilter"
-                                Unchecked="OnToggleFilter"
-                                IsChecked="{Binding IsFiltered}"/>
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-          </DataGrid.Columns>
-        </DataGrid>
+                <TextBlock Grid.Column="1" Text="{Binding Name}" Classes="monospace" TextTrimming="CharacterEllipsis"/>
+
+                <ToggleButton Grid.Column="2"
+                              Classes="filter"
+                              Margin="0,0,8,0"
+                              Background="Transparent"
+                              Checked="OnToggleFilter"
+                              Unchecked="OnToggleFilter"
+                              IsVisible="{Binding IsTag}"
+                              IsChecked="{Binding IsFiltered}"/>
+              </Grid>
+            </TreeDataTemplate>
+          </TreeView.ItemTemplate>
+        </TreeView>
 
         <!-- Submodules -->
-        <ToggleButton Grid.Row="8" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
+        <ToggleButton Grid.Row="9" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
           <Grid ColumnDefinitions="Auto,*,Auto,Auto">
             <TextBlock Grid.Column="0" Classes="group_header_label" Margin="4,0,0,0" Text="{DynamicResource Text.Repository.Submodules}"/>
             <TextBlock Grid.Column="1" Text="{Binding Submodules, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
@@ -328,7 +352,7 @@
             </Button>
           </Grid>
         </ToggleButton>
-        <DataGrid Grid.Row="9"
+        <DataGrid Grid.Row="10"
                   MaxHeight="200"
                   Background="Transparent"
                   ItemsSource="{Binding Submodules}"
@@ -365,7 +389,7 @@
       </Grid>
 
       <!-- Left Search Mode -->
-      <Grid Grid.Column="0" RowDefinitions="32,*" IsVisible="{Binding IsSearching}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
+      <Grid Grid.Column="0" RowDefinitions="32,*" IsVisible="{Binding IsSearchingCommits}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
         <!-- Search -->
         <TextBox Grid.Row="0"
                  x:Name="txtSearchCommitsBox"
@@ -377,7 +401,7 @@
                  Watermark="{DynamicResource Text.Repository.SearchTip}"
                  Text="{Binding SearchCommitFilter, Mode=TwoWay}"
                  VerticalContentAlignment="Center"
-                 KeyDown="OnSearchKeyDown">
+                 KeyDown="OnSearchCommitsKeyDown">
           <TextBox.InnerLeftContent>
             <Path Width="14" Height="14"
                   Margin="6,0,0,0"
