--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -31,6 +31,7 @@
   <UserControl.DataTemplates>
     <DataTemplate DataType="vm:ChangeCollectionAsTree">
       <v:ChangeCollectionContainer ItemsSource="{Binding Rows}"
+                                   SelectedItems="{Binding SelectedRows, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
         <ListBox.ItemTemplate>
@@ -65,6 +66,7 @@
 
     <DataTemplate DataType="vm:ChangeCollectionAsGrid">
       <v:ChangeCollectionContainer ItemsSource="{Binding Changes}"
+                                   SelectedItems="{Binding SelectedChanges, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
         <ListBox.ItemTemplate>
@@ -93,6 +95,7 @@
 
     <DataTemplate DataType="vm:ChangeCollectionAsList">
       <v:ChangeCollectionContainer ItemsSource="{Binding Changes}"
+                                   SelectedItems="{Binding SelectedChanges, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
         <ListBox.ItemTemplate>
