--- a/src/Views/LFSLocks.axaml
+++ b/src/Views/LFSLocks.axaml
@@ -5,6 +5,7 @@
                     xmlns:m="using:SourceGit.Models"
                     xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
+                    xmlns:c="using:SourceGit.Converters"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.LFSLocks"
                     x:DataType="vm:LFSLocks"
@@ -44,19 +45,24 @@
     </Grid>
 
     <!-- Filter and Unlock All -->
-    <Grid Grid.Row="1" ColumnDefinitions="Auto,*,Auto" Margin="8,0,0,0">
-      <CheckBox Grid.Column="0"
-                Content="Show only my locks"
-                IsChecked="{Binding ShowOnlyMyLocks}"
-                IsEnabled="{Binding !IsLoading}"
-                VerticalAlignment="Center" />
-    </Grid>
+    <CheckBox Grid.Row="1"
+              Margin="8,0,0,0"
+              Content="Show only my locks"
+              IsChecked="{Binding ShowOnlyMyLocks, Mode=TwoWay}"
+              VerticalAlignment="Center">
+      <CheckBox.IsEnabled>
+        <MultiBinding Converter="{x:Static BoolConverters.And}">
+          <Binding Path="HasValidUserName"/>
+          <Binding Path="!IsLoading"/>
+        </MultiBinding>
+      </CheckBox.IsEnabled>
+    </CheckBox>
 
     <!-- Locked Files -->
     <Grid Grid.Row="2">
       <ListBox Margin="8,0,8,8"
                Background="{DynamicResource Brush.Contents}"
-               ItemsSource="{Binding FilteredLocks}"
+               ItemsSource="{Binding VisibleLocks}"
                SelectionMode="Single"
                BorderThickness="1"
                BorderBrush="{DynamicResource Brush.Border2}"
@@ -98,9 +104,14 @@
       </ListBox>
 
       <!-- Empty -->
-      <StackPanel Orientation="Vertical"
-                  HorizontalAlignment="Center" VerticalAlignment="Center"
-                  IsVisible="{Binding IsEmpty}">
+      <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel.IsVisible>
+          <MultiBinding Converter="{x:Static BoolConverters.And}">
+            <Binding Path="!IsLoading"/>
+            <Binding Path="VisibleLocks" Converter="{x:Static c:ListConverters.IsNullOrEmpty}"/>
+          </MultiBinding>
+        </StackPanel.IsVisible>
+        
         <Path Width="48" Height="48" Data="{StaticResource Icons.Empty}" Fill="{DynamicResource Brush.FG2}"/>
         <TextBlock Margin="0,16,0,0" Text="{DynamicResource Text.GitLFS.Locks.Empty}" Foreground="{DynamicResource Brush.FG2}"/>
       </StackPanel>
